packages/astro/e2e/fixtures/errors/src/pages/svelte-runtime-error.astro
---
import SvelteRuntimeError from '../components/svelte/SvelteRuntimeError.svelte';
---

<div>
  <SvelteRuntimeError />
</div>
